--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="styles/reset.css" />
+  <link rel="stylesheet" href="assets/style.css" />
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" /> -->
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" /> -->
   <title>Weather Dashboard</title>
@@ -41,8 +41,50 @@
       </aside>
 
       <div class="col-lg-9 pb-3">
-        <section id="today" class="mt-3" role="region" aria-live="polite"></section>
-        <section id="forecast" class="row mt-3" role="region" aria-live="polite"></section>
+        <section id="today" class="mt-3" role="region" aria-live="polite">
+
+          <p>Temperature:<span class="current" id="temperature"></span></p>
+          <p>Humidity:<span class="current" id="humidity"></span></p>
+          <p>Wind Speed:<span class="current" id="wind-speed"></span></p>
+        </section>
+
+
+        <section id="forecast" class="row mt-3" role="region" aria-live="polite">
+          <h3>5-Day Forecast:</h3>
+          <div class="row text-light">
+            <div class="col-sm-2">
+              <p id="fDate0"></p>
+              <p id="fImg0"></p>
+              <p>Temp:<span id="fTemp0"></span></p>
+              <p>Humidity:<span id="fHumidity0"></span></p>
+            </div>
+            <div class="col-sm-2">
+              <p id="fDate1"></p>
+              <p id="fImg1"></p>
+              <p>Temp:<span id="fTemp1"></span></p>
+              <p>Humidity:<span id="fHumidity1"></span></p>
+            </div>
+            <div class="col-sm-2">
+              <p id="fDate2"></p>
+              <p id="fImg2"></p>
+              <p>Temp:<span id="fTemp2"></span></p>
+              <p>Humidity:<span id="fHumidity2"></span></p>
+            </div>
+            <div class="col-sm-2">
+              <p id="fDate3"></p>
+              <p id="fImg3"></p>
+              <p>Temp:<span id="fTemp3"></span></p>
+              <p>Humidity:<span id="fHumidity3"></span></p>
+            </div>
+            <div class="col-sm-2 ">
+              <p id="fDate4"></p>
+              <p id="fImg4"></p>
+              <p>Temp:<span id="fTemp4"></span></p>
+              <p>Humidity:<span id="fHumidity4"></span></p>
+            </div>
+          </div>
+
+        </section>
       </div>
     </div>
   </div>
@@ -51,7 +93,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="script.js"></script>
+  <script src="assets/weather.js"></script>
 </body>
 
 </html>
