--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="assets/style.css" />
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" /> -->
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" /> -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" /> -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" /> -->
   <title>Weather Dashboard</title>
 </head>
 
 <body>
-  <header class="container-fluid text-center text-white bg-dark p-2 weather-header">
+  <header class="container-fluid mt-2 text-center text-white bg-dark p-2 weather-header">
     <h1>Weather Dashboard</h1>
   </header>
 
@@ -26,7 +26,7 @@
         <form id="search-form" class="form">
           <div class="form-inline form-group">
             <div class="input-group">
-              <input class="form-input weather-search" type="text" id="search-input" placeholder="London"
+              <input class="form-input weather-search" type="text" id="search-input" placeholder="London" 
                 aria-labelledby="form-heading" aria-controls="today forecast" />
               <div class="input-group-append">
                 <button type="submit" class="btn search-button" id="search-button" aria-label="submit search">
@@ -40,43 +40,45 @@
         <div class="list-group" id="history"></div>
       </aside>
 
-      <div class="col-lg-9 pb-3">
+      <div class="col-lg-9 pb-3 border border-dark rounded">
         <section id="today" class="mt-3" role="region" aria-live="polite">
-
+          <h3 class="city-name mb-1 mt-2 bolder" id="current-city"></h3>
           <p>Temperature:<span class="current" id="temperature"></span></p>
+          <p>Wind:<span class="current" id="wind-speed"></span></p>
           <p>Humidity:<span class="current" id="humidity"></span></p>
-          <p>Wind Speed:<span class="current" id="wind-speed"></span></p>
+          
         </section>
+        </div>
 
 
         <section id="forecast" class="row mt-3" role="region" aria-live="polite">
-          <h3>5-Day Forecast:</h3>
+          <h3> 5-Day Forecast:</h3>
           <div class="row text-light">
-            <div class="col-sm-2">
+            <div class="col-sm-2 bg-primary fore text-white ml-2 mb-3 p-2 mt-2 rounded">
               <p id="fDate0"></p>
               <p id="fImg0"></p>
               <p>Temp:<span id="fTemp0"></span></p>
-              <p>Humidity:<span id="fHumidity0"></span></p>
+               <p>Humidity:<span id="fHumidity0"></span></p>
             </div>
-            <div class="col-sm-2">
+            <div class="col-sm-2 bg-primary fore text-white ml-2 mb-3 p-2 mt-2 rounded">
               <p id="fDate1"></p>
               <p id="fImg1"></p>
-              <p>Temp:<span id="fTemp1"></span></p>
+              <p>Temp:<span id="fTemp1"></span></p>   
               <p>Humidity:<span id="fHumidity1"></span></p>
             </div>
-            <div class="col-sm-2">
+            <div class="col-sm-2 bg-primary fore text-white ml-2 mb-3 p-2 mt-2 rounded">
               <p id="fDate2"></p>
               <p id="fImg2"></p>
               <p>Temp:<span id="fTemp2"></span></p>
               <p>Humidity:<span id="fHumidity2"></span></p>
             </div>
-            <div class="col-sm-2">
+            <div class="col-sm-2 bg-primary fore text-white ml-2 mb-3 p-2 mt-2 rounded">
               <p id="fDate3"></p>
               <p id="fImg3"></p>
               <p>Temp:<span id="fTemp3"></span></p>
               <p>Humidity:<span id="fHumidity3"></span></p>
             </div>
-            <div class="col-sm-2 ">
+            <div class="col-sm-2 bg-primary fore text-white ml-2 mb-3 p-2 mt-2 rounded">
               <p id="fDate4"></p>
               <p id="fImg4"></p>
               <p>Temp:<span id="fTemp4"></span></p>
